exports[`<ShopSolutionsPage /> render matches snapshot with zero, one and many cards 1`] = `
<article
  id="shop-solutions-page">
  <div
    className="container center-block">
    <section
      className="intro-block col-xs-12">
      <h1>
        For Public Safety, By Public Safety
      </h1>
      <p>
        The FirstNet Applications Store and Solutions Catalog offers enhanced technologies to complement public safety\'s fundamental services and applications. Current solutions include applications that are designed to improve workflow and communication, enhance device and connection security, and enable public safety organizations to scale departmental capabilities by utilizing cloud and IP-based services.
      </p>
      <p>
        FirstNet is cultivating a dedicated public safety applications development program, with participation from leading providers across the applications development community. Many more solutions will be added in response to these focused efforts and as public safety needs evolve.
      </p>
      <p>
        Contact a FirstNet Specialist to learn more about FirstNet Solutions and pricing details.
      </p>
    </section>
    <section
      className="all-cards-wrapper">
      <nav />
    </section>
  </div>
</article>
`;

exports[`<ShopSolutionsPage /> render matches snapshot with zero, one and many cards 2`] = `
<article
  id="shop-solutions-page">
  <div
    className="container center-block">
    <section
      className="intro-block col-xs-12">
      <h1>
        For Public Safety, By Public Safety
      </h1>
      <p>
        The FirstNet Applications Store and Solutions Catalog offers enhanced technologies to complement public safety\'s fundamental services and applications. Current solutions include applications that are designed to improve workflow and communication, enhance device and connection security, and enable public safety organizations to scale departmental capabilities by utilizing cloud and IP-based services.
      </p>
      <p>
        FirstNet is cultivating a dedicated public safety applications development program, with participation from leading providers across the applications development community. Many more solutions will be added in response to these focused efforts and as public safety needs evolve.
      </p>
      <p>
        Contact a FirstNet Specialist to learn more about FirstNet Solutions and pricing details.
      </p>
    </section>
    <section
      className="all-cards-wrapper">
      <nav>
        <div
          className="col-xs-12 col-sm-6 col-md-6 col-lg-4 solutions-card">
          <div
            className="card-wrapper has-shadow">
            <a
              href="solutions/name"
              onClick={[Function anonymous]}>
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
              <div
                className="card-contents-wrapper">
                <h3
                  className="card-title"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "name"
                    }
                  } />
                <div
                  className="card-desc"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "description"
                    }
                  } />
              </div>
              <div
                className="learn-more">
                Learn More
                <i
                  aria-hidden="true"
                  className="icon-arrowRight" />
              </div>
            </a>
          </div>
        </div>
      </nav>
    </section>
  </div>
</article>
`;

exports[`<ShopSolutionsPage /> render matches snapshot with zero, one and many cards 3`] = `
<article
  id="shop-solutions-page">
  <div
    className="container center-block">
    <section
      className="intro-block col-xs-12">
      <h1>
        For Public Safety, By Public Safety
      </h1>
      <p>
        The FirstNet Applications Store and Solutions Catalog offers enhanced technologies to complement public safety\'s fundamental services and applications. Current solutions include applications that are designed to improve workflow and communication, enhance device and connection security, and enable public safety organizations to scale departmental capabilities by utilizing cloud and IP-based services.
      </p>
      <p>
        FirstNet is cultivating a dedicated public safety applications development program, with participation from leading providers across the applications development community. Many more solutions will be added in response to these focused efforts and as public safety needs evolve.
      </p>
      <p>
        Contact a FirstNet Specialist to learn more about FirstNet Solutions and pricing details.
      </p>
    </section>
    <section
      className="all-cards-wrapper">
      <nav>
        <div
          className="col-xs-12 col-sm-6 col-md-6 col-lg-4 solutions-card">
          <div
            className="card-wrapper has-shadow">
            <a
              href="solutions/name"
              onClick={[Function anonymous]}>
              <div
                className="card-img-wrapper">
                <img
                  alt="alt"
                  src="url" />
              </div>
              <div
                className="card-contents-wrapper">
                <h3
                  className="card-title"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "name"
                    }
                  } />
                <div
                  className="card-desc"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "description"
                    }
                  } />
              </div>
              <div
                className="learn-more">
                Learn More
                <i
                  aria-hidden="true"
                  className="icon-arrowRight" />
              </div>
            </a>
          </div>
        </div>
      </nav>
    </section>
  </div>
</article>
`;
